1/9/13 center control panels in the right section of the canvas (first 3 tabs), scale control panels if i18n makes them too wide
1/8/13 for first 3 tabs, keep graph in same position, tweak position so that slope tool doesn't fall off left edge of play area
1/8/13 remove unnecessary IChallenge interface, rename base class MatchChallenge to Challenge
1/8/13 make specialized graphs inner classes of GTL_GraphNode
1/8/13 handle PTP challenges in the GTL view
1/8/13 make MatchChallenge.createInitialGuess private, make initial guess null for PTP challenges
1/8/13 PTP_GraphNode extends GTL_GraphNode
1/8/13 PTP_Challenge extends GTL_Challenge
1/8/13 rename GTL_GraphNode subclasses
1/8/13 rename ManipulationMode.POINTS to TWO_POINTS, change usage sites accordingly
1/8/13 add ManipulationMode.THREE_POINTS
1/8/13 a couple of tweaks to make GTL and PTP view implementations more similar, to ease refactoring
1/8/13 change "P3P" (Place 3 Points) to "PTP" (Place the Points) throughout code, to match terminology used by the team
# 0.00.48 (71539) Jan 8, 2013
1/8/13 demonstrate equation fixes
1/8/13 fix: in point-slope equations, if interactive rise=0, then noninteractive (x-x1) term disappears
1/8/13 fix: in slope-intercept equations, if interactive run=0, then noninteractive y-intercept is 0/0
1/8/13 fix: in slope-intercept equations, if interactive run=0, then interactive y-intercept can't be changed
1/8/13 slope-intercept equations: use separate properties and node for interactive (integer) vs non-interactive (fractional) y-intercept
1/8/13 add developer "Skip" button for skipping the current challenge
1/8/13 change request: "Set the y-Intercept" -> "Set the Y-intercept"
# 0.00.47 (71528) Jan 7, 2013
1/7/13 add challenge descriptions, displayed below challenge title for debugging purposes
1/7/13 first attempt at forcing slope inversion in level=4
1/7/13 first pass at challenge generation for level=4
1/7/13 cleanup and document challenge generation for levels 1-3